--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <h2> My Profile </h2>
   <div class="profile-center">
 <div class="photo-left">
-  <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Olivier.JPG" alt="Olivier" class="profile" width="200" height="200">
+  <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Olivier.jpg" alt="Olivier" class="profile" width="200" height="200">
   <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/0.JPG" alt="banner" class="profile2" width="800" height="200">
    <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Antibes.JPG" alt="antibes" class="profile2" width="700" height="200">
 </div>
