--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <div class="profile-center">
 <div class="photo-left">
   <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Olivier.jpg" alt="Olivier" class="profile" width="200" height="200">
-  <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/0.JPG" alt="banner" class="profile2" width="800" height="200">
-   <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Antibes.JPG" alt="antibes" class="profile2" width="700" height="200">
+  <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/0.jpg" alt="banner" class="profile2" width="800" height="200">
+   <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Antibes.jpg" alt="antibes" class="profile2" width="700" height="200">
 </div>
   <p>I am Olivier Spagnou, passionate about marketing and neurosciences. 
 
@@ -54,15 +54,15 @@ For further information about me and my curriculum, I invite you to check my <a 
 
 	<div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/neuromarketing-notes/"> Neuromarketing </a></strong>: here you will find an overview of what neuromarketing is with key videos and sources. You will also be able to download my <strong>"Introduction to Neuromarketing Booklet" </strong>I wrote.</li>
-<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Neuromarketing.JPG" 	alt="Neuromarketing" class="image-section" width="150" height="100">
+<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Neuromarketing.jpg" 	alt="Neuromarketing" class="image-section" width="150" height="100">
 </div>
 <div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/nintendo-team-project/"> Nintendo </a></strong>: in this section you will be able to take a close look at the marketing strategy of Nintendo based on my previous work and research. It also includes Nintendo video ads.. You will be able able to download my <strong>"Nintendo Brand Audit"</strong> and <strong>"Nintendo CRM Analysis"</strong> group project.</li>
-<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Nintendo.PNG" 	alt="Nintendo" class="image-section" width="250" height="100">
+<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Nintendo.png" 	alt="Nintendo" class="image-section" width="250" height="100">
 </div>
 <div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/trading-card-game-industry-analysis/"> TCG Industry </a></strong>: this section is dedicated to another passion of mine: trading card game and especially Yu-Gi-Oh. You will be able to download my paper on the <strong>TCG market analysis</strong>, with a focus on Konami (Yu Gi OH developer). This section also includes a discussion about the future trends of this market. </li>
-<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Yu Gi Oh.PNG" 	alt="Yu Gi Oh" class="image-section" width="300" height="150">
+<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Yu Gi Oh.png" 	alt="Yu Gi Oh" class="image-section" width="300" height="150">
 </div>
 <div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/contact/blog/"> Blog Portfolio </a></strong>: here you will be able to find the different blog posts I write regularly. They are based on my research, courses, books and videos about <strong>neuromarketing, guerilla marketing</strong> but also <strong>pyschology</strong>. I regularly launch new post based on my discoveries in this field. This is where I share with you what are the last hot topics and trends in this field.</li>
@@ -71,7 +71,7 @@ For further information about me and my curriculum, I invite you to check my <a 
 <div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/content-to-download/"> Content to Download </a></strong>: this final section includes all the different content you can download on my website on a single page. It includes my work about Nintenod, TCG, my neuromarketing booklet, but also my resume and my different certifications.</li>
 
-<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Download.PNG"   alt="Download" class="image-section2" width="100" height="100">
+<img src="C:\Users\ospag\OneDrive\Bureau\landing\images/Download.png"   alt="Download" class="image-section2" width="100" height="100">
 </div>
 
 
