--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Banner section -->
 </div>
 	<div class="header-image">
-  <img src="images/logo3.PNG" 	alt="NeurOlivier" class="logo" width="450" height="450">
+  <img src="C:\Users\ospag\OneDrive\Bureau\landing\images/logo3.PNG" 	alt="NeurOlivier" class="logo" width="450" height="450">
 </div>
 </div>
 
