--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <h2> My Profile </h2>
   <div class="profile-center">
 <div class="photo-left">
-  <img src="images/olivier.jpg" alt="Olivier" class="profile" width="200" height="200">
+  <img src="images/Olivier.jpg" alt="Olivier" class="profile" width="200" height="200">
   <img src="images/0.jpg" alt="banner" class="profile2" width="800" height="200">
-   <img src="images/antibes.jpg" alt="antibes" class="profile2" width="700" height="200">
+   <img src="images/Antibes.jpg" alt="antibes" class="profile2" width="700" height="200">
 </div>
   <p>I am Olivier Spagnou, passionate about marketing and neurosciences. 
 
