--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ For further information about me and my curriculum, I invite you to check my <a 
 </div>
 <div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/trading-card-game-industry-analysis/"> TCG Industry </a></strong>: this section is dedicated to another passion of mine: trading card game and especially Yu-Gi-Oh. You will be able to download my paper on the <strong>TCG market analysis</strong>, with a focus on Konami (Yu Gi OH developer). This section also includes a discussion about the future trends of this market. </li>
-<img src="images/yu_gi_oh.png" 	alt="Yu Gi Oh" class="image-section" width="300" height="150">
+<img src="images/Yu Gi Oh.png" 	alt="Yu Gi Oh" class="image-section" width="300" height="150">
 </div>
 <div class="list-boxes">
 <li><strong><a href="https://olivierportfolio.blog/contact/blog/"> Blog Portfolio </a></strong>: here you will be able to find the different blog posts I write regularly. They are based on my research, courses, books and videos about <strong>neuromarketing, guerilla marketing</strong> but also <strong>pyschology</strong>. I regularly launch new post based on my discoveries in this field. This is where I share with you what are the last hot topics and trends in this field.</li>
